Changed mod_version to 0.1.0-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,6 @@ org.gradle.jvmargs=-Xmx1G
 
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 0.1.0-SNAPSHOT
 	maven_group = io.github.MrDiamond123
 	archives_base_name = diamondsneatmod
