--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.6-SNAPSHOT'
+	id 'fabric-loom' version '0.2.7-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -11,12 +11,12 @@ version = project.mod_version
 group = project.maven_group
 
 dependencies {
-    minecraft "com.mojang:minecraft:20w13b"
-    mappings "net.fabricmc:yarn:20w13b+build.10:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.7.8+build.189"
+    minecraft "com.mojang:minecraft:20w15a"
+    mappings "net.fabricmc:yarn:20w15a+build.4:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.8.2+build.194"
             
     //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.5.6+build.313-1.16"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.5.10+build.320-1.16"
 }
 
 processResources {
